--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Crafting Code, Sculpting Art: The Tech-Driven Artist</h1>
+            <h1>Crafting Code, Sculpting Art: A Tech-Driven Artist</h1>
         </div>
     </header>
 
