--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="content">
                 <img src="WhatsApp Image 2023-06-29 at 05.38.21.jpeg" alt="Logo for Sydney Erik Wamalwa">
                 <div>
-                    <p>Embarking on a dynamic journey in the world of technology, I am Sydney Erik Wamalwa, an aspiring software
+                    <p>Embarking on a dynamic journey in the world of technology, I am Sydney Erik Wamalwa, a software
                         engineer and devoted computer science student at Kibo School. Hailing from Nairobi, Kenya, I bring forth a
                         blend of innovation, technical prowess, and an unwavering passion for driving positive change through
                         technology.</p>
