--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Crafting Code, Sculpting Art: A Tech-Driven Artist</h1>
+            <h1>Crafting Code, Sculpting Art: The Tech-Driven Artist</h1>
         </div>
     </header>
 
@@ -112,14 +112,11 @@
         <div class="container">
             <div class="bro"><p>The TechBro👨🏿‍💻</p></div>
             <div class="content">
-                <img src="WhatsApp Image 2023-06-29 at 05.38.21.jpeg" alt="Logo for Sydney Erik Wamalwa">
+                <img src="Syd-passport photo_page-0001.jpg" alt="Logo for Sydney Erik Wamalwa">
                 <div>
-                    <p>Embarking on a dynamic journey in the world of technology, I am Sydney Erik Wamalwa, a software
-                        engineer and devoted computer science student at Kibo School. Hailing from Nairobi, Kenya, I bring forth a
-                        blend of innovation, technical prowess, and an unwavering passion for driving positive change through
-                        technology.</p>
-                </div>
+                    <p>As a Nairobi-based software engineer, I compose elegant solutions using Python, JavaScript, HTML, CSS and Java. Beyond code, I bridge art and tech, infusing creativity into user interfaces and database optimization. My global vision? Technology without boundaries, impact without limits.</p>
             </div>
+        </div>
         </div>
     </section>
 
@@ -132,7 +129,7 @@
                 <a href="https://github.com/SydneyWamalwa" target="_blank" rel="noopener noreferrer">Github</a>
 
             </div>
-            <a href="cv.pdf" download>Download CV</a>
+            <a href="Sydney Wamalwa Resume.pdf" download>Download CV</a>
         </div>
     </footer>
 </body>
