--- a/index.html
+++ b/index.html
@@ -710,9 +710,9 @@
                             <span>📸</span>
                             <span>@wamalwasydney</span>
                         </a>
-                        <a href="mailto:sydney@example.com" class="social-link">
+                        <a href="mailto:sydneywamalwa@gmail.com" class="social-link">
                             <span>✉️</span>
-                            <span>sydney@example.com</span>
+                            <span>sydneywamalwa@gmail.com</span>
                         </a>
                     </div>
 
